test/Fail/Issue4092.err
Issue4092.agda:6.8-12: error: [UnequalLevel]
lzero != lsuc lzero
when checking that the expression refl has type lzero ≡ lsuc lzero
